Move the Azure login info in the credentials store