@@ -77,6 +77,7 @@ import com.microsoft.azure.exceptions.AzureCloudException;
 import com.microsoft.azure.exceptions.UnrecoverableCloudException;
 import com.microsoft.azure.retry.ExponentialRetryStrategy;
 import com.microsoft.azure.retry.NoRetryStrategy;
+import com.microsoft.azure.util.AzureCredentials;
 import com.microsoft.azure.util.AzureUserAgentFilter;
 import com.microsoft.azure.util.AzureUtil;
 import com.microsoft.azure.util.CleanUpAction;
@@ -384,7 +385,7 @@ public class AzureVMManagementServiceDelegate {
         azureAgent.setSshPort(Constants.DEFAULT_SSH_PORT);
 
         LOGGER.log(Level.INFO, "Azure agent details:\nnodeName{0}\nadminUserName={1}\nshutdownOnIdle={2}\nretentionTimeInMin={3}\nlabels={4}", 
-            new Object[] { azureAgent.getNodeName(), azureAgent.getCredentialsId(), azureAgent.isShutdownOnIdle(),
+            new Object[] { azureAgent.getNodeName(), azureAgent.getVMCredentialsId(), azureAgent.isShutdownOnIdle(),
                 azureAgent.getRetentionTimeInMin(), azureAgent.getLabelString()});
     }
     
@@ -477,11 +478,8 @@ public class AzureVMManagementServiceDelegate {
                     deploymentName,
                     template.getRetentionTimeInMin(),
                     template.getInitScript(),
-                    azureCloud.getSubscriptionId(),
-                    azureCloud.getClientId(),
-                    azureCloud.getClientSecret(),
-                    azureCloud.getOauth2TokenEndpoint(),
-                    azureCloud.getServiceManagementURL(),
+                    azureCloud.getAzureCredentialsId(),
+                    azureCloud.getServicePrincipal(),
                     template.getAgentLaunchMethod(),
                     CleanUpAction.DEFAULT,
                     null,
@@ -608,33 +606,19 @@ public class AzureVMManagementServiceDelegate {
     /**
      * Validates certificate configuration.
      *
-     * @param subscriptionId
-     * @param clientId
-     * @param oauth2TokenEndpoint
-     * @param clientSecret
-     * @param serviceManagementURL
+     * @param servicePrincipal
      * @param resourceGroupName
      * @return
      */
     public static String verifyConfiguration(
-            final String subscriptionId,
-            final String clientId,
-            final String clientSecret,
-            final String oauth2TokenEndpoint,
-            final String serviceManagementURL,
+            final AzureCredentials.ServicePrincipal servicePrincipal,
             final String resourceGroupName) {
-        if (StringUtils.isBlank(subscriptionId)
-                || StringUtils.isBlank(clientId)
-                || StringUtils.isBlank(oauth2TokenEndpoint)
-                || StringUtils.isBlank(clientSecret)
-                || StringUtils.isBlank(resourceGroupName)) {
-
+        if (servicePrincipal.isBlank() || StringUtils.isBlank(resourceGroupName)) {
             return Messages.Azure_GC_Template_Val_Profile_Missing();
         } else {
             try {
-                // Load up the configuration now and do a live verification            
-                Configuration config = ServiceDelegateHelper.loadConfiguration(
-                        subscriptionId, clientId, clientSecret, oauth2TokenEndpoint, serviceManagementURL);
+                // Load up the configuration now and do a live verification
+                Configuration config = ServiceDelegateHelper.loadConfiguration(servicePrincipal);
 
                 if (!verifyConfiguration(config, resourceGroupName).equals(Constants.OP_SUCCESS)) {
                     return Messages.Azure_GC_Template_Val_Profile_Err();
@@ -994,11 +978,7 @@ public class AzureVMManagementServiceDelegate {
     /**
      * Verifies template configuration by making server calls if needed.
      *
-     * @param subscriptionId
-     * @param clientId
-     * @param clientSecret
-     * @param oauth2TokenEndpoint
-     * @param serviceManagementURL
+     * @param servicePrincipal
      * @param templateName
      * @param labels
      * @param location
@@ -1017,18 +997,13 @@ public class AzureVMManagementServiceDelegate {
      * @param virtualNetworkName
      * @param subnetName
      * @param retentionTimeInMin
-     * @param templateStatus
      * @param jvmOptions
      * @param returnOnSingleError
      * @param resourceGroupName
      * @return
      */
     public static List<String> verifyTemplate(
-            final String subscriptionId,
-            final String clientId,
-            final String clientSecret,
-            final String oauth2TokenEndpoint,
-            final String serviceManagementURL,
+            final AzureCredentials.ServicePrincipal servicePrincipal,
             final String templateName,
             final String labels,
             final String location,
@@ -1056,8 +1031,7 @@ public class AzureVMManagementServiceDelegate {
         
         // Load configuration
         try {
-            config = ServiceDelegateHelper.loadConfiguration(
-                    subscriptionId, clientId, clientSecret, oauth2TokenEndpoint, serviceManagementURL);
+            config = ServiceDelegateHelper.loadConfiguration(servicePrincipal);
             String validationResult;
             
             // Verify basic info about the template
@@ -1088,7 +1062,7 @@ public class AzureVMManagementServiceDelegate {
                 return errors;
             }
             
-            validationResult = verifyLocation(location, serviceManagementURL);
+            validationResult = verifyLocation(location, servicePrincipal.serviceManagementURL);
             addValidationResultIfFailed(validationResult, errors);
             if (returnOnSingleError && errors.size() > 0) {
                 return errors;
